# pmboard

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
accounts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
manage/management/commands/: wait_for_db.py
nginx/: nginx.conf
pmboard/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
projects/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py
scripts/: createsuperuser.sh  db.sh  docker.sh  format.sh  runserver.sh  runtests.sh  setup.sh
tasks/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_completion_percentage.py
