[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmboard"
version = "0.1.0"
description = "A modern Project Management System built with Django REST Framework"
readme = "README.md"
authors = [
    {name = "Jobet P. Casquejo", email = "jobetcasquejo221@gmail.com"},
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2.0,<5.0.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "django-cors-headers>=4.3.0",
    "django-filter>=23.3",
    "drf-spectacular>=0.27.0",
    "whitenoise>=6.5.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.7",
    "Pillow>=10.0.0",
    "django-model-utils>=4.3.1",
    "django-timezone-field>=6.1.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "openpyxl>=3.1.2",
    "tablib>=3.5.0",
    "django-import-export>=3.2.0",
    "django-environ>=0.11.2",
    "gunicorn>=21.2.0",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "django-celery-beat>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.2",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "django-stubs>=4.2.0",
    "djangorestframework-stubs>=3.14.0",
    "django-debug-toolbar>=4.1.0",
    "django-extensions>=3.2.3",
    "ipython>=8.14.0",
    "pre-commit>=3.3.3",
]

docs = [
    "sphinx>=7.0.1",
    "sphinx-rtd-theme>=1.2.2",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jobet1130/pmboard.git"
Documentation = "https://pmboard.readthedocs.io/"
Repository = "https://github.com/jobet1130/pmboard"
Changelog = "https://github.com/jobet1130/pmboard/releases"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--reuse-db --ds=config.settings.test"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pmboard"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "if TYPE_CHECKING:",
]

[tool.setuptools]
packages = ["pmboard"]
package-dir = { "" = "." }

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true